--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
  /* This is a css file */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    text-align: center;
+    justify-content: center;
+    font-family: Tahoma, Verdana, sans-serif;
+
+}
+
+header {
+    font-weight: bold;
+}
